kubernetes/hcloud/apps/garage-system/garage/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-cluster
spec:
  hostnames:
    - s3.${EXTERNAL_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: garage-cluster
          port: 3900
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-cdn
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - cdn.${EXTERNAL_DOMAIN}
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Cache-Control
                value: "public, max-age=31536000, immutable"
      backendRefs:
        - name: garage-cluster
          port: 3902
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-docs
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - docs.${EXTERNAL_DOMAIN}
  rules:
    - backendRefs:
        - name: garage-cluster
          port: 3902
